tests/suppress/suppress.exp
Error ------------------------------------------------------------------------------------------------------- A.js:13:21

Cannot assign `123` to `test3` because number [1] is incompatible with string [2]. [incompatible-type]

   A.js:13:21
   13| var test3: string = 123; // This error is NOT suppressed
                           ^^^ [1]

References:
   A.js:13:12
   13| var test3: string = 123; // This error is NOT suppressed
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:7:5

Cannot assign `y` to `x` because property `bar` is missing in object type [1] but exists in object type [2] in property
`x`. [incompatible-type]

   D.js:7:5
   7| x = y;
          ^

References:
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [1]
   D.js:5:6
   5|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:7:5

Cannot assign `y` to `x` because property `foo` is missing in object type [1] but exists in object type [2] in property
`x`. [incompatible-type]

   D.js:7:5
   7| x = y;
          ^

References:
   D.js:5:6
   5|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [1]
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [2]


Warning ------------------------------------------------------------------------------------------------------ A.js:11:1

Unused suppression comment.

   11| // $FlowFixMe[incompatible-type] Error unused suppression
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Warning ------------------------------------------------------------------------------------------------------- E.js:8:1

Unused suppression comment.

   8| // $FlowFixMe[sketchy-null-string] - this is unused because sketchy-null-string is off
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 3 errors and 2 warnings
